--- a/src/components/EditBlog.module.css
+++ b/src/components/EditBlog.module.css
@@ -4,3 +4,26 @@
     padding: 2rem 2rem 0;
     border-radius: 1rem;
 }
+
+.buttonContainer{
+    display: flex;
+}
+
+.edit_delete_button{
+    text-align: center;
+    justify-content: center;
+    height: 25px;
+    margin-top: 7px;
+    margin-right: 5px;
+    font-size: 13px !important;
+    font-weight: 500 !important;
+    padding: 2px 6px!important;
+    background-color: #116466 !important;
+    color: #d1e8e2 !important;
+}
+
+.edit_delete_button:hover{
+    border: 1px solid #116466 !important;
+    background-color: #d1e8e2 !important;
+    color: #116466 !important;
+}
